--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,8 @@
     <style name="Base.Theme.FnialProjectAndriod" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:windowSplashScreenAnimatedIcon">@drawable/ic_icon_app</item>
+
     </style>
 
     <style name="Theme.FnialProjectAndriod" parent="Base.Theme.FnialProjectAndriod" />
